--- a/index.html
+++ b/index.html
@@ -97,14 +97,109 @@
                 </div>
                 <div class="col-12 col-sm align-self-center ">
 
-                    <a href="#ReserveTable" class="btn btn-warning nav-link btn-sm btn-block " data-toggle="tooltip" data-html="true" 
+                    <!-- <a href="#ReserveTable" class="btn btn-warning nav-link btn-sm btn-block " data-toggle="tooltip" data-html="true" 
                         title="Or Call us at <br><strong>+852 123345678</strong>" data-placement="bottom" role="button"> 
-                        <strong>Reserve table</strong></a> 
+                        <strong>Reserve table</strong></a>  -->
+                        <a href="#ReserveTable" data-toggle="modal"  class="btn btn-warning nav-link btn-sm btn-block "
+                        role="button"> 
+                        <strong>Reserve table</strong></a>
 
                 </div>
             </div>
         </div>
     </header>
+    <div id="ReserveTable" class="modal fade" role="dialog" >
+        <div class="modal-dialog modal-lg" role="content">
+           <div class="modal-content">
+               <div class="modal-header">
+                   <h4 class="modal-title">Reserve a Table</h4>
+                   <button type="button" class="close" data-dismiss="modal"> 
+                       &times;
+                   </button>
+
+               </div>
+               <div class="modal-body">
+                <form>
+                    <div class="form-group row">
+                        <label for="Numberofguests" class="col-sm-2 col-form-label">Number of Guests</label>
+
+                        <div class="col-sm-9 m-0 offset-2 row ">
+                            <div class="col-1 ">
+                                <input type="radio" class="form-check-input" name="Numberofguests"
+                                    id="Numberofguests" value="">
+                                <label class="form-check-label" for="Numberofguests"> <strong>
+                                        1</strong></label>
+                            </div>
+
+                            <div class="col-1">
+                                <input type="radio" class="form-check-input" name="Numberofguests"
+                                    id="Numberofguests" value="">
+                                <label class="form-check-label" for="Numberofguests"> <strong>
+                                        2</strong></label>
+                            </div>
+                            <div class="col-1">
+                                <input type="radio" class="form-check-input" name="approve" id="approve"
+                                    value="">
+                                <label class="form-check-label" for="Numberofguests"> <strong>
+                                        3</strong></label>
+                            </div>
+                            <div class="col-1">
+                                <input type="radio" class="form-check-input" name="Numberofguests"
+                                    id="Numberofguests" value="">
+                                <label class="form-check-label" for="Numberofguests"> <strong>
+                                        4</strong></label>
+                            </div>
+
+                            <div class="col-1">
+                                <input type="radio" class="form-check-input" name="Numberofguests"
+                                    id="Numberofguests" value="">
+                                <label class="form-check-label" for="Numberofguests"> <strong>
+                                        5</strong></label>
+                            </div>
+                            <div class="col-1">
+                                <input type="radio" class="form-check-input" name="Numberofguests"
+                                    id="Numberofguests" value="">
+                                <label class="form-check-label" for="Numberofguests"> <strong>
+                                        6</strong></label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="Section" class="col-12 col-md-2 col-form-label">Section</label>
+                        <div class="col-5 col-md-3">
+                            <div class="btn-group">
+                            <button class="btn btn-success btn-sm" type="button">Non-Smoking</button>
+                            <button class="btn btn-danger btn-sm" type="button">Smoking</button>
+                         
+                            </div>
+                        </div>                        
+                    </div>
+                    <div class="form-group row">
+                        <label for="dateandtime" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                        <div class="col-5 col-md-3">
+                            <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+
+                        </div>
+                        <div class="col-5 col-md-3">
+                            <input type="time" class="form-control" id="time" name="time" placeholder="Time">
+
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <div class="offset-md-2 col-md-10">
+                            <div class="btn-row">
+                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm"> Reserve</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+               </div>
+           </div>
+        </div>
+
+    </div>
 
     <div class="container">
         <div class="row row-content">
@@ -123,16 +218,16 @@
                         <div class="carousel-item ">
                             <img class="d-block img-fluid" src="img/buffet.png" alt="uthappizza">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                                <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
                                 <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five
                                     different salads, six enticing appetizers, six main entrees and five choicest desserts. Free
                                     flowing bubbly and soft drinks. All for just $19.99 per person </p>
                             </div>
                         </div>
                         <div class="carousel-item ">
+                            <img class="d-block img-fluid" src="img/alberto.png" alt="alberto">
                             <div class="carousel-caption d-none d-md-block">
-                                <img class="d-block img-fluid" src="img/alberto.png" alt="alberto">
-                                <h2 class="mt-0">Alberto Somayya</h2>
+                                <h2 >Alberto Somayya</h2>
                                 <h4>Executive Chef</h4>
                                 <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International
                                     experience having worked closely with whos-who in the culinary world, he specializes in
@@ -152,6 +247,14 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -213,7 +316,7 @@
             </div>
         </div>
 
-        <div class="row row-content align-items-center">
+      <!--   <div class="row row-content align-items-center">
 
             <div class="col-sm ">
                 <div class="card">
@@ -282,6 +385,7 @@
                                     <button type="submit" class="btn btn-primary"> Reserve</button>
                                 </div>
                             </div>
+                        </form>
                     </div>
 
 
@@ -290,7 +394,7 @@
             <div class="col-sm-4">
 
             </div>
-        </div>
+        </div> -->
     </div>
 
     <footer class="footer">
@@ -343,10 +447,22 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script> 
+<!--     <script> 
     $(document).ready(function(){
         $('[data-toggle="tooltip"]').tooltip();
     })
+    </script> -->
+    <script>
+        $(document).ready(function(){
+            $('#mycarousel').carousel({interval:2000});
+            $('#carousel-pause').click(function(){
+                $('#mycarousel').carousel('pause');
+            });
+            $('#carousel-play').click(function(){
+                $('#mycarousel').carousel('cycle');
+            });
+
+        })
     </script>
 </body>
 
